fixed horizontal scrolling

--- a/css/output.css
+++ b/css/output.css
@@ -647,6 +647,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
